--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -30,167 +30,7 @@
 
 
 <body{{ attributes }}>
-<div id="ie6Warning"></div>
 
-
-<!-- Page Wrap -->
-<div id="page-wrap">
-
-
-<!-- Top Bar -->
-<ul class="hide" id="skip-nav">
-    <li><a href="#audience-nav">Skip to Audience Navigation</a></li>
-    <li><a href="#main-nav">Skip to Main Menu</a></li>
-    <li><a href="#searchform">Skip to Search</a></li>
-    <li><a href="#main-content">Skip to Main Content</a></li>
-</ul>
-
-<div id="top-bar" role="navigation">
-    <div id="top-bar-content">
-        <a href="http://www.ucla.edu/" id="edu-link">UCLA.edu</a>
-    <ul id="audience-nav">
-            <li><a href="http://www.ucla.edu/students/prospective-students">Prospective Students</a></li>
-            <li><a href="http://www.ucla.edu/students/current-students">Current Students</a></li>
-            <li><a href="http://www.ucla.edu/faculty">Faculty</a></li>
-            <li><a href="http://www.ucla.edu/staff">Staff</a></li>
-            <li><a href="http://www.ucla.edu/alumni">Alumni</a></li>
-            <li><a href="http://www.ucla.edu/parents-and-families">Parents &amp; Families</a></li>
-    </ul>
-    </div>
-</div>
-<!-- End Top Bar -->
-
-<!-- Header -->
-<span id="print-logo"><img src="./img/logo-print.gif"></span>
-
-<div id="header" role="banner">
-        
-        <!-- Header Content -->
-        <div id="header-content">
-            <h1 id="template-logo"><a href="./"><img src="./img/logo-sample-dept-name.png" alt="Department Name" /></a></h1>
-            
-            <!-- Responsive Buttons -->
-            <div id="mobile-buttons">
-                <a href="http://m.ucla.edu/" id="mobile">Apps<span></span></a>
-                <a href="#" id="nav-control">Menu<span></span></a>
-            </div>
-            <!-- End Responsive Buttons -->
-                            
-      <div id="nav-group">
-        <div id="searchbox">
-                    <form id="searchform" name="searchform" role="search" method="get" action="">
-                          <input type="text" name="q" id="searchbox-input" class="search-site" title="Search Site" value="Search Site" size="20"  maxlength="255">
-                          <input id="searchbox-btn" type="image" value="Submit" name="search" alt="Search" src="./img/search-btn.gif">
-                    </form>  
-</div>      </div>
-        </div>
-        <!-- End Header Content -->
-
-</div>
-<!-- End Header -->
-
-<!-- End Container -->
-<div id="container" class="full-page department-page">
-
-
-  <!-- Main -->
-  <div id="main-content" role="main">
-    
-      <ul id="secondary-nav" role="navigation">
-            <li><a href="#" class="active">LINK 1</a></li>
-            <li><a href="#">LINK 2</a></li>
-            <li><a href="#">LINK 3</a></li>
-            <li><a href="#">LINK 4</a></li>
-            <li><a href="#">LINK 5</a></li>
-    </ul>
-            
-    <h2 id="interior-split-page-header-full">Link 1</h2>
-    
-    <div id="interior-split-container">
-          <img src="./img/755x175.jpg" id="interior-split-hero-image" alt="Image Placeholder" />
-    </div>
-    
-    
-    <div class="clear-fix right-wide-column">
-            <div class="section">
-                <h5>Lorem Ipsum<br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec orci risus, venenatis nec tristique vitae, tincidunt ac justo. Ut porta blandit leo quis condimentum. Vestibulum vel lectus eu lacus euismod mollis. Aenean interdum, sem sed rutrum ornare, eros nulla dictum nulla, vitae pharetra ante ligula tincidunt ante. Nullam vel libero non est vestibulum auctor sit amet sit amet lectus. Nam in mollis nisi. Curabitur nec lorem erat, eu pellentesque metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque luctus elit pellentesque massa sagittis lobortis. Aliquam egestas, dui vel iaculis condimentum, justo sem pharetra neque, vitae gravida felis turpis nec ipsum. Aliquam ullamcorper volutpat porta.</p>
-                
-                <div class="more-info">
-                    <ul class="link-column bullet">
-                        <li><a href="#">LINK 1A</a></li>
-                        <li><a href="#">LINK 1A</a></li>
-                        <li><a href="#">LINK 1A</a></li>
-                    </ul>
-                    <ul class="link-column bullet">
-                       <li><a href="#">LINK 2A</a></li>
-                       <li><a href="#">LINK 2A</a></li>
-                       <li><a href="#">LINK 2A</a></li>
-                    </ul>
-                </div>             
-            
-            </div>    
-            <div class="section">
-              <h4>More Information</h4>
-                <div class="more-info">
-                    <ul class="link-column bullet">
-                        <li><a href="#">LINK 1B</a></li>
-                        <li><a href="#">LINK 1B</a></li>
-                        <li><a href="#">LINK 1B</a></li>
-                        <li><a href="#">LINK 1B</a></li>              
-                    </ul>
-                    <ul class="link-column bullet">
-                        <li><a href="#">LINK 2B</a></li>
-                        <li><a href="#">LINK 2B</a></li>
-                        <li><a href="#">LINK 2B</a></li>
-                        <li><a href="#">LINK 2B</a></li>              
-                  </ul>
-                </div> 
-            </div>
-    </div>    
-                
-     </div><!-- main-content -->
-  <!-- End Main -->
-  
-  
-</div>
-<!-- End Container -->
-
-
-<div id="footer-push"></div>
-
-
-</div>
-<!-- End Page Wrap -->
-
-
-<!-- Footer -->
-<div id="footer">
-    <div id="footer-content">
-        <ul id="footer-nav">
-            <li><a href="http://ucla.edu">UCLA.edu</a></li>
-            <li><a href="#">Lorem</a></li>
-            <li><a href="#">Ipsum</a></li>
-            <li><a href="#">Dolor</a></li>
-      <li><a href="#">Sit</a></li>
-      <li><a href="#">Amet</a></li>
-            <li><a href="#">Consectetur</a></li>
-      <li><a href="#">Adipiscing</a></li>
-        </ul>
-        <ul id="contact-info">
-          <li>Department Name</li>
-            <li>Street</li>
-            <li>Los Angeles, CA 90095</li>
-            <li>555.555.5555</li>
-        </ul>
-        <div id="social-media">
-        <a href="#" title="Your department on Facebook" class="facebook">Your department on Facebook</a>
-      <a href="#" title="Your department on Twitter" class="twitter">Your department on Twitter</a>
-    </div>
-     </div>
-</div>
-<!-- End Footer -->
 
 <!-- Scripts -->
 {#
@@ -201,6 +41,14 @@
 <script src="./js/search.js"></script>
 #}
 <!-- Version 1.4.0 04-22-13-->
+
+{#
+      Keyboard navigation/accessibility link to main content section in
+      page.html.twig.
+    #}
+    <a href="#main-content" class="visually-hidden focusable">
+      {{ 'Skip to main content'|t }}
+    </a>
 {{ page_top }}
 {{ page }}
 {{ page_bottom }}
