adds nav_left to page template

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -53,6 +53,7 @@
     <div id="container" class="full-page department-page">
       <!-- Main -->
       <div id="main-content" role="main">
+        {{ page.nav_left }}
         <ul id="secondary-nav" role="navigation">
           <li><a href="#" class="active">LINK 1</a></li>
           <li><a href="#">LINK 2</a></li>
