--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -10,16 +10,18 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
   <title>{{ head_title|safe_join(' | ') }}</title>
-  <meta name="description" content="UCLA (University of California, Los Angeles) is the largest UC campus in terms of enrollment, and one of the few public research universities located in a major city." />
-  <meta name="keywords" content="UCLA, University of California Los Angeles, UCLA Bruins" />  
+  <meta name="description" content="UCLA Library (University of California, Los Angeles) is proud sponsor of Senior
+  Fellows." />
+  <meta name="keywords" content="UCLA Library, Senior Fellows" />
 
-  <link rel="shortcut icon" href="./img/favicon.ico">
+  <link rel="shortcut icon" href="themes/custom/ucla_gateway/img/favicon.ico">
+
   <link rel="apple-touch-icon" href="./img/apple-touch-icon.png">
 
   <css-placeholder token="{{ placeholder_token }}">
   {# <link rel="stylesheet" href="./css/main.css"> #}
   {# <link rel="stylesheet" href="./css/responsive.css">     #}
-  <!--<link rel="stylesheet" href="./css/fixed.css">-->
+  <!--<link rel="stylesheet" hreffixed.css.css.css">-->
   {# <link rel="stylesheet" href="./css/print.css" media="print"> #}
   
   {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
