--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -13,12 +13,9 @@
     <div id="top-bar-content">
       <a href="http://www.ucla.edu/" id="edu-link">UCLA.edu</a>
       <ul id="audience-nav">
-        <li><a href="http://www.ucla.edu/students/prospective-students">Prospective Students</a></li>
-        <li><a href="http://www.ucla.edu/students/current-students">Current Students</a></li>
-        <li><a href="http://www.ucla.edu/faculty">Faculty</a></li>
-        <li><a href="http://www.ucla.edu/staff">Staff</a></li>
-        <li><a href="http://www.ucla.edu/alumni">Alumni</a></li>
-        <li><a href="http://www.ucla.edu/parents-and-families">Parents &amp; Families</a></li>
+        <li><a href="http://www.library.ucla.edu/">UCLA Library</a></li>
+        <li><a href="https://gseis.ucla.edu/">UCLA GSEIS</a></li>
+        <li><a href="http://www.sr.ithaka.org/">Ithaka S+R</a></li>
       </ul>
     </div>
   </div>
@@ -26,51 +23,15 @@
   <!-- Header -->
   <span id="print-logo"><img src="./img/logo-print.gif"></span>
   <div id="header" role="banner">
-    
+
     <!-- Header Content -->
-    <div id="header-content">
-      <h1 id="template-logo"><a href="./"><img src="./img/logo-sample-dept-name.png" alt="Department Name" /></a></h1>
-      
-      <!-- Responsive Buttons -->
-      <div id="mobile-buttons">
-        <a href="http://m.ucla.edu/" id="mobile">Apps<span></span></a>
-        <a href="#" id="nav-control">Menu<span></span></a>
-      </div>
-      <!-- End Responsive Buttons -->
-      
-      <div id="nav-group">
-        <div id="searchbox">
-          <form id="searchform" name="searchform" role="search" method="get" action="">
-            <input type="text" name="q" id="searchbox-input" class="search-site" title="Search Site" value="Search Site" size="20"  maxlength="255">
-            <input id="searchbox-btn" type="image" value="Submit" name="search" alt="Search" src="./img/search-btn.gif">
-          </form>
-        </div>      </div>
-      </div>
-      <!-- End Header Content -->
-    </div>
-    <!-- End Header -->
-    <!-- End Container -->
+      {{ page.header }}
+
     <div id="container" class="full-page department-page">
       <!-- Main -->
       <div id="main-content" role="main">
-        {{ page.nav_left }}
-        <ul id="secondary-nav" role="navigation">
-          <li><a href="#" class="active">LINK 1</a></li>
-          <li><a href="#">LINK 2</a></li>
-          <li><a href="#">LINK 3</a></li>
-          <li><a href="#">LINK 4</a></li>
-          <li><a href="#">LINK 5</a></li>
-        </ul>
+          {{ page.secondary_nav }}
         
-        
-        {# <h2 id="interior-split-page-header-full">Link 1</h2> #}
-        
-        {# <div id="interior-split-container">
-          <img src="./img/755x175.jpg" id="interior-split-hero-image" alt="Image Placeholder" />
-        </div> #}
-        
-        
-        <div class="clear-fix right-wide-column">
           {{ page.content }}
         </div>
       </div><!--End main-content -->
@@ -83,13 +44,9 @@
       <div id="footer-content">
         <ul id="footer-nav">
           <li><a href="http://ucla.edu">UCLA.edu</a></li>
-          <li><a href="#">Lorem</a></li>
-          <li><a href="#">Ipsum</a></li>
-          <li><a href="#">Dolor</a></li>
-          <li><a href="#">Sit</a></li>
-          <li><a href="#">Amet</a></li>
-          <li><a href="#">Consectetur</a></li>
-          <li><a href="#">Adipiscing</a></li>
+          <li><a href="http://library.ucla.edu">UCLA Library</a></li>
+          <li>© 2014–2017 UC Regents</li>
+
         </ul>
         <ul id="contact-info">
           <li>Department Name</li>
@@ -97,10 +54,6 @@
           <li>Los Angeles, CA 90095</li>
           <li>555.555.5555</li>
         </ul>
-        <div id="social-media">
-          <a href="#" title="Your department on Facebook" class="facebook">Your department on Facebook</a>
-          <a href="#" title="Your department on Twitter" class="twitter">Your department on Twitter</a>
-        </div>
       </div>
     </div>
     <!-- End Footer -->
