WS-1124: css changes responsive, sharpen logo, add theme screenshot

--- a/templates/form.html.twig
+++ b/templates/form.html.twig
@@ -17,7 +17,7 @@
     <form action="/search/node" method="get" id="search-block-form" accept-charset="UTF-8" data-drupal-form-fields="edit-keys,searchbox-btn">
       <input title="Enter the terms you wish to search for." data-drupal-selector="edit-keys" type="text"
              id="edit-keys" name="keys" value="" size="15" maxlength="128" class="form-search form-control" placeholder="Site Search">
-      <input id="searchbox-btn" type="image" value="Submit" name="search" alt="" src="/themes/custom/ucla_gateway/img/search-btn.gif">
+      <input id="searchbox-btn" type="image" value="Submit" name="search" alt="Site Search" src="/themes/contrib/ucla_gateway/img/search-btn.gif">
 
     </div>
   </form>
