--- a/css/responsive.css
+++ b/css/responsive.css
@@ -68,7 +68,7 @@
     #featured-stories-mobile .text { margin-left:51%; }
 }
 
-@media screen and (max-width:959px) { 
+@media screen and (max-width:959px) {
     #main-nav li { background:url(../img/white-divider.gif) no-repeat left 35%; margin:0; padding:0 0 0 5px; }
     #main-nav li a { font-size:1.2em; margin:0; padding:5px; }
     #container { padding:0 10px; box-sizing: border-box; width: 100%; }
@@ -80,9 +80,10 @@
     #home-news ul { height:auto; min-height:100px; }
     #home-events ul { height:auto; min-height:100px; }
     #footer li { margin-left:8px; padding-left:8px; }
+    .content-inner { width: 505px; }
 }
 
-@media screen and (max-width:930px) { 
+ @media screen and (max-width:930px) {
     .lt-ie9 #main-nav li a { font-size:1.1em; padding:0 6px 0 5px; }
 }
 
@@ -144,7 +145,7 @@
     .logo img { width: 40%; }
     #callout-nav { display:block; height:auto; margin:0; position:relative; top:auto; width:auto; }
     #searchbox form { box-sizing: border-box; width: 100%; margin-top: 20px; }
-    #searchbox { left: auto; padding: 38px 0 0; position: relative;  top: 6px; }
+    #searchbox { left: auto; padding: 38px 0 0; position: relative;  top: 15px; }
     #callout-nav li { border-top:1px solid #FFFFFF; display:block; float:none; height:auto; width:auto; }
     #callout-nav li a { background:none; border:none; box-shadow:none; color:#ffe800; font-size:1.3em; height:auto; letter-spacing:normal; line-height:1.4em; padding:5px; text-align:left; text-shadow:none; width:auto; }
     #callout-nav li a:hover { color:#ffe800; }
@@ -218,9 +219,9 @@
     #social-media a { float:none; margin:0 2px; }
     .lt-ie8 #social-media a { display:inline-block; float:none; }
     #content-emergency { float:none; width:100%; }
+    .content-inner { width: 540px; }
     #emergency-information-container { float:none; width:100%; }
-    input[type=text], select, textarea { font-size:16px; }
-    /*input#edit-keys { padding-top:0; }*/
+    input[type="text"], select, textarea { font-size:16px; padding: 5px; width: 99%; margin-top: -25px; height:26px !important; }
     * { max-width:100% !important; height:auto !important; }
 }
 
@@ -264,6 +265,7 @@
 @media screen and (max-width:680px) { 
     #google-map { display:none; }
     #bottom-search-box { display:none; }
+    #searchbox #searchbox-btn {top: 8px; }
 }
 
 @media screen and (max-width:600px) { 
@@ -286,11 +288,20 @@
     .full-page	#secondary-nav { float:none; margin-right:0; width:auto; }
     #featured-stories-mobile .overview li {  margin-bottom:20px; }
     label { line-height:1 }
-    #searchbox #searchbox-btn { top:-1px; }
+    #searchbox #searchbox-btn { top:0; }
     input#edit-keys { width: 98%; }
     form#search-form label { line-height:1 }
 }
+@media screen and (max-width:400px) {
+    #searchbox #searchbox-btn { top: -12px; }
+}
+
+@media screen and (max-width:360px) {
+    #searchbox #searchbox-btn { top:-12px; }
+}
 
 @media screen and (max-width:320px) {
-    #audience-nav li { background:none; margin:0 10px 0 0; padding:0; }
-    #searchbox #searchbox-btn { top: -1px; width: 38px }
+    #audience-nav li { background: none; margin: 0 10px 0 0; padding: 0; }
+    #searchbox #searchbox-btn { top: -1px; width: 38px; }
+    input[type="text"], select, textarea { width: 97% !important; margin-top: -10px; }
+}
