--- a/templates/block--ucla-gateway-branding.html.twig
+++ b/templates/block--ucla-gateway-branding.html.twig
@@ -23,7 +23,7 @@
 </div>
   {% endif %}
   {% if site_name %}
-    <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home"></a>
+    <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">Home</a>
   {% endif %}
   {{ site_slogan }}
     {% include 'form.html.twig' %}
