WS-1122: fixes #14 by resolving the links to the proper ids and making the menu keyboard accessible

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -3,10 +3,10 @@
 <div id="page-wrap">
   <!-- Top Bar -->
   {{ page.top_bar }}
-  <ul class="hide" id="skip-nav">
+  <ul class="visually-hidden focusable" id="skip-nav">
     <li><a href="#audience-nav">Skip to Audience Navigation</a></li>
-    <li><a href="#main-nav">Skip to Main Menu</a></li>
-    <li><a href="#searchform">Skip to Search</a></li>
+    <li><a href="#secondary-nav">Skip to Nav Menu</a></li>
+    <li><a href="#searchbox">Skip to Search</a></li>
     <li><a href="#main-content">Skip to Main Content</a></li>
   </ul>
   <div id="top-bar" role="navigation">
